crates/common/src/instrument/snapshots/common__instrument__layout__tests__instrument_layout_1280x800.snap
---
source: crates/common/src/instrument/layout.rs
expression: layout
---
{
  "space": [
    1280.0,
    800.0
  ],
  "orientation": "Horizontal",
  "left_string_position": [
    [
      0.0,
      347.5
    ],
    [
      1280.0,
      347.5
    ]
  ],
  "right_string_position": [
    [
      0.0,
      452.5
    ],
    [
      1280.0,
      452.5
    ]
  ],
  "instrument_breadth": 105.0,
  "key_radius": 24.336011419190402,
  "key_band_length": 347.5,
  "key_band_breadth": 83.33333333333333,
  "safe_area_padding": {
    "top": 0.0,
    "right": 0.0,
    "bottom": 0.0,
    "left": 0.0
  },
  "key_bands_gap": 16.55510980897306,
  "groups_gap": 19.866131770767673,
  "num_keys_per_group": 5,
  "num_groups": 2,
  "first_group_channel": "Right",
  "scale": "In"
}
