crates/common/src/instrument/snapshots/common__instrument__layout__tests__instrument_layout_1440x900.snap
---
source: crates/common/src/instrument/layout.rs
expression: layout
---
{
  "space": [
    1440.0,
    900.0
  ],
  "orientation": "Horizontal",
  "left_string_position": [
    [
      0.0,
      393.3
    ],
    [
      1440.0,
      393.3
    ]
  ],
  "right_string_position": [
    [
      0.0,
      506.7
    ],
    [
      1440.0,
      506.7
    ]
  ],
  "instrument_breadth": 113.4,
  "key_radius": 26.69356252542447,
  "key_band_length": 375.3,
  "key_band_breadth": 90.0,
  "safe_area_padding": {
    "top": 18.0,
    "right": 18.0,
    "bottom": 18.0,
    "left": 18.0
  },
  "key_bands_gap": 18.158886071717326,
  "groups_gap": 21.79066328606079,
  "num_keys_per_group": 5,
  "num_groups": 2,
  "first_group_channel": "Left",
  "scale": "In"
}
