crates/common/src/instrument/snapshots/common__instrument__layout__tests__instrument_layout_1536x864.snap
---
source: crates/common/src/instrument/layout.rs
expression: layout
---
{
  "space": [
    1536.0,
    864.0
  ],
  "orientation": "Horizontal",
  "left_string_position": [
    [
      0.0,
      377.6625
    ],
    [
      1536.0,
      377.6625
    ]
  ],
  "right_string_position": [
    [
      0.0,
      486.3375
    ],
    [
      1536.0,
      486.3375
    ]
  ],
  "instrument_breadth": 108.675,
  "key_radius": 23.21309113363495,
  "key_band_length": 359.6625,
  "key_band_breadth": 86.25,
  "safe_area_padding": {
    "top": 18.0,
    "right": 18.0,
    "bottom": 18.0,
    "left": 18.0
  },
  "key_bands_gap": 16.0,
  "bands_gap": 19.2,
  "num_keys_per_band": 5,
  "num_bands": 2,
  "first_band_channel": "Right",
  "scale": "In"
}
