crates/common/src/instrument/snapshots/common__instrument__layout__tests__instrument_layout_390x844.snap
---
source: crates/common/src/instrument/layout.rs
expression: layout
---
{
  "space": [
    390.0,
    844.0
  ],
  "orientation": "Vertical",
  "left_string_position": [
    [
      164.64196148416542,
      0.0
    ],
    [
      164.64196148416542,
      844.0
    ]
  ],
  "right_string_position": [
    [
      225.35803851583458,
      0.0
    ],
    [
      225.35803851583458,
      844.0
    ]
  ],
  "instrument_breadth": 60.71607703166918,
  "key_radius": 20.093681361773484,
  "key_band_length": 164.64196148416542,
  "key_band_breadth": 48.18736272354697,
  "safe_area_padding": {
    "top": 24.0,
    "right": 0.0,
    "bottom": 16.0,
    "left": 0.0
  },
  "key_bands_gap": 16.0,
  "bands_gap": 19.2,
  "num_keys_per_band": 3,
  "num_bands": 2,
  "first_band_channel": "Right",
  "scale": "Yo"
}
