crates/common/src/instrument/snapshots/common__instrument__layout__tests__instrument_layout_393x873.snap
---
source: crates/common/src/instrument/layout.rs
expression: layout
---
{
  "space": [
    393.0,
    873.0
  ],
  "orientation": "Vertical",
  "left_string_position": [
    [
      156.7060869459246,
      0.0
    ],
    [
      156.7060869459246,
      873.0
    ]
  ],
  "right_string_position": [
    [
      236.2939130540754,
      0.0
    ],
    [
      236.2939130540754,
      873.0
    ]
  ],
  "instrument_breadth": 79.58782610815078,
  "key_radius": 27.582470677837613,
  "key_band_length": 156.7060869459246,
  "key_band_breadth": 63.164941355675225,
  "safe_area_padding": {
    "top": 0.0,
    "right": 0.0,
    "bottom": 0.0,
    "left": 0.0
  },
  "key_bands_gap": 16.887226945614866,
  "groups_gap": 20.26467233473784,
  "num_keys_per_group": 3,
  "num_groups": 2,
  "first_group_channel": "Left",
  "scale": "In"
}
